@@ -2,6 +2,7 @@
 
 	* libmisc/salt.c (SHA_salt_rounds): It is statically ensured that
 	the format fits in rounds_prefix.
+	* libmisc/loginprompt.c: Likewise.
 
 2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>
 
